<resources>
    <string name="app_name">LinkedinExpressoEssentialCourse</string>
    <string name="hello_2021">Hello 2021!</string>
    <string name="button">Button</string>
    <string name="title">My Amazing Title</string>
</resources>